# Babel

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  Snakefile  config.json  config.yaml  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bad-preferred-name.md  bad-preferred-name.yml  config.yml  identifiers-should-be-merged.md  identifiers-should-be-merged.yml  identifiers-should-be-split.md  identifiers-should-be-split.yml  request-new-identifier-system-or-mappings.md  request-new-identifier-system-or-mappings.yml  wrong-biolink-type.md  wrong-biolink-type.yml
.github/scripts/: contributors.py
.github/workflows/: check-formatting.yaml.yml  check-formatting.yml  contributors.yaml  label-priority.yml  monthly-contributors-report.yaml  monthly-issue-metrics.yaml  release.yaml  test.yml
babel_io/: .gitignore  Cargo.toml
babel_io/src/: lib.rs
babel_outputs/: config.yaml
docs/: AddingNewSources.md  Architecture.md  Babel.ipynb  BabelOutputs.md  Conflation.md  DataFormats.md  Deployment.md  Development.md  Downloads.md  Metadata.md  NewIssue.md  Performance.md  README.md  RunningBabel.md  Testing.md  Tools.md  Triage.md  UMLSSemanticTypes.md  Understanding.md
docs/AddingSources/: README.md
docs/debugging/: Conflation.md
docs/reports/: ProteinChemicalOverlap.md
docs/sources/: CLAUDE.md  DownloadPatterns.md  README.md
docs/tools/: CheckEncoding.md  CliqueDiff.md  Errors.md  Memory.md  README.md  Resources.md  SourceImpactReport.md
input_data/: anatomy_badxrefs.txt  check.py  label_overrides.yaml  manual_terms.ndjson  mondo_badxrefs.txt  mp_badxrefs.txt  obsolete_labels.yaml  obsolete_synonyms.yaml  parse_bad_mappings.py
input_data/manual_concords/: disease.txt  drugchemical.numbers  drugchemical.tsv
kubernetes/: babel.k8s.yaml
releases/: 2025jan23.md  2025mar31.md  2025sep1.md  README.md  TranslatorDecember2023.md  TranslatorFuguJuly2024.md  TranslatorGuppyAugust2024.md  TranslatorHammerheadNovember2024.md  TranslatorMay2024.md  v1.11.md
releases/summaries/: compare.py
scripts/: README.md  babel-build.sh
scripts/commit-split/: README.md  verify-buckets.sh  verify-completeness.sh
slurm/: README.md  config.yaml  run-babel-on-slurm.sh
slurm/job/: run_babel_mutiple_nodes.job  run_babel_one_node.job
src/: LabeledID.py  assess_compendia.py  babel_utils.py  categories.py  eutil.py  filter_compendia.py  label_filter.py  label_overrides.py  make_cliques.py  memory.py  node.py  predicates.py  prefixes.py  print_unmerged.py  properties.py  sdfreader.py  triplestore.py  ubergraph.py  util.py
src/cli/: source_impact_report.py
src/createcompendia/: anatomy.py  cell_line.py  chemicals.py  cliques.py  diseasephenotype.py  drugchemical.py  gene.py  genefamily.py  geneprotein.py  leftover_umls.py  macromolecular_complex.py  manual.py  processactivitypathway.py  protein.py  publications.py  taxon.py
src/datahandlers/: CLAUDE.md  chebi.py  chembl.py  clo.py  complexportal.py  datacollect.py  doid.py  drugbank.py  drugcentral.py  ec.py  efo.py  ensembl.py  gtopdb.py  hgnc.py  hgncfamily.py  hmdb.py  kegg.py  mesh.py  mods.py  ncbigene.py  ncbitaxon.py  ncit.py  obo.py  omim.py  orphanet.py  pantherfamily.py  pantherpathways.py  pubchem.py  reactome.py  rhea.py  smpdb.py  umls.py  unichem.py  unii.py  uniprotkb.py
src/exporters/: duckdb_exporters.py  kgx.py  sapbert.py
src/labels/: filter.py
src/metadata/: provenance.py
src/model/: clique_diff.py  cliques.py  compendium_diff.py  glom_diff.py  source.py
src/reports/: compendia_per_file_reports.py  conflation_reports.py  drugprotein_conflation_report.py  duckdb_reports.py  prefix_comparison.py  protein_chemical_overlap.py  report_tables.py  source_impact.py  source_impact_details.py
src/scripts/: README.md  common.py  umls_report.py
src/snakefiles/: anatomy.snakefile  bulk_normalizer.snakefile  cell_line.snakefile  chemical.snakefile  datacollect.snakefile  diseasephenotype.snakefile  drugchemical.snakefile  duckdb.snakefile  exports.snakefile  gene.snakefile  genefamily.snakefile  geneprotein.snakefile  leftover_umls.snakefile  macromolecular_complex.snakefile  manual.snakefile  util.py  (+6 more)
tests/: CLAUDE.md  README.md  conftest.py  test_LabeledID.py  test_ThrottledRequester.py  test_anatomy_emapa.py  test_babel_errors.py  test_babel_utils.py  test_biolink_model_freshness.py  test_chemicals.py  test_clique_diff.py  test_cliques.py  test_duckdb_exporters.py  test_ftp.py  test_geneproteiny.py  test_glom.py  test_label_filter.py  test_label_overrides.py  test_memory.py  test_node_factory.py  test_snakefile_util.py  test_snakefiles_util.py  test_source_discovery.py  test_source_impact_cli.py  test_source_impact_details.py  test_source_impact_survival.py  test_triplestore.py  test_uber.py  test_ubergraph_build_sets.py  test_util.py
tools/: __init__.py  babel-errors.py
(+196 files in other folders)
