[package]
name = "babel_io"
version = "0.1.0"
edition = "2024"

[lib]
name = "babel_io"

[dependencies]
async_once = "^0.2"
csv = "^1.3"
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.11"
humantime = "^2.2"
itertools = "^0.14"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
polars = { version = "^0.45", features = ["default", "cloud", "concat_str", "string_pad", "dtype-array", "strings", "regex", "json", "cross_join", "lazy", "coalesce", "polars-lazy", "parquet", "find_many", "csv", "decompress", "list_eval", "is_in"] }
oxigraph = "^0.4"
rand = "^0.9"
rayon = "^1.10"
regex = "^1.11"
reqwest = { version = "^0.12", features = ["default", "json"] }
roxmltree = "^0.20"
serde = { version = "^1.0", features = ["derive", "serde_derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = { version = "^3.12", features = ["std", "macros", "json"] }
tokio = { version = "^1.45", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "^1.1", features = ["v4"] }
quick-xml = "^0.38"
zip = "^4.2"
